Fix incorrect dropdown color in dark mode

--- a/public/css/mango.less
+++ b/public/css/mango.less
@@ -66,7 +66,6 @@
 
 // Dark theme
 .uk-light {
-	.uk-navbar-dropdown,
 	.uk-modal-header,
 	.uk-modal-body,
 	.uk-modal-footer {
@@ -75,6 +74,7 @@
 	.uk-navbar-dropdown,
 	.uk-dropdown {
 		color: #ccc;
+		background: #333;
 	}
 	.uk-nav-header,
 	.uk-description-list > dt {
